[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "hypothesis>=6.100.0,<7",
  "pytest>=8.1.1,<9",
  "tox>=4.23.2,<5"
]

[project]
authors = [{name = "Matthieu Gallet", email = "github@19pouces.net"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
description = "Read and write Ruby-marshalled data"
license = "WTFPL"
maintainers = [{name = "Matthieu Gallet", email = "github@19pouces.net"}]
name = "rubymarshal"
readme = "README.md"
requires-python = ">=3.8,<4"
version = "1.2.10"

[project.urls]
Documentation = "https://github.com/d9pouces/RubyMarshal"
Repository = "https://github.com/interdiode/interdiode-logo"

[tool.hatch.build.targets.sdist]
include = ["rubymarshal"]

[tool.hatch.build.targets.wheel]
include = ["rubymarshal"]
