# ##############################################################################
#  This file is part of Interdiode                                             #
#                                                                              #
#  Copyright (C) 2020 Matthieu Gallet <matthieu.gallet@19pouces.net>           #
#  All Rights Reserved                                                         #
#                                                                              #
# ##############################################################################
[metadata]
author =                        Matthieu Gallet
author_email =                  github@19pouces.net
classifiers =  
        Development Status :: 5 - Production/Stable
        Intended Audience :: System Administrators
        License :: OSI Approved
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Utilities
description =                   Read and write Ruby-marshalled data
license =                       WTFPL
long_description =              file: README.md
long_description_content_type = text/markdown
maintainer =                    Matthieu Gallet
maintainer_email =              github@19pouces.net
name =                          rubymarshal
url =                           https://github.com/d9pouces/RubyMarshal
version =                       attr: rubymarshal.__version__

[options]
include_package_data =          False
packages =                      find:
zip_safe =                      True
install_requires =  
tests_require =  
        tox

[options.packages.find]
exclude =  
        *.DS_Store
        *.sass-cache*
include =                       rubymarshal

[isort]
multi_line_output =             3
include_trailing_comma =        True
force_grid_wrap =               0
use_parentheses =               True
line_length =                   88

[flake8]
ignore =                        E203, E501, C901, F401, W503
max-line-length =               88
max-complexity =                18
select =                        B,C,E,F,W,T4,B9

[tox:tox]
envlist =                       py34,py35,py36,py37,py38,py39
minversion =                    3.4.0

[testenv]
deps =                          -rtest_requirements.txt
setenv =  
        PYTHONDEVMODE=1
        PYTHONHASHSEED=28739944
commands =  
        nosetests rubymarshal_tests
        isort --profile=black setup.py rubymarshal rubymarshal_tests
        black setup.py rubymarshal rubymarshal_tests
        flake8 setup.py rubymarshal rubymarshal_tests
