[options.packages.find]
exclude =
    *.DS_Store
    *.sass-cache*
include = rubymarshal

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[flake8]
ignore = E203, E501, C901, F401, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tox:tox]
envlist = py38,py39,py310,py311,py312
minversion = 3.4.0

[testenv]
deps = -rtest_requirements.txt
setenv =
    PYTHONDEVMODE=1
    PYTHONHASHSEED=28739944
commands =
    python3 -m poetry build
    python3 -m pytest rubymarshal_tests
